--- a/RollerCoasterAnalysis.ipynb
+++ b/RollerCoasterAnalysis.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
-  {
+ {
+   "cell_type": "markdown",
+   "id": "0cc9be4b-144e-4b1b-8ce4-7563f8963f2c",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### Introductory Data Analysis: Rollercoasters \n",
+    "\n",
+    "# Credits to Rob Mulla (youtube.com/watch?v=xi0vhXFPegw)"
+   ]
+  }, 
+ {
    "cell_type": "code",
    "execution_count": null,
    "id": "e4c0e5d6-437a-47ad-a399-4c9ed1c0b159",
