--- a/RollerCoasterAnalysis.ipynb
+++ b/RollerCoasterAnalysis.ipynb
@@ -7,7 +7,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "### Introductory Data Analysis: Rollercoasters \n",
+    "# Introductory Data Analysis: Rollercoasters \n",
     "\n",
     "# Credits to Rob Mulla (youtube.com/watch?v=xi0vhXFPegw)"
    ]
