--- a/RollerCoasterAnalysis.ipynb
+++ b/RollerCoasterAnalysis.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# Introductory Data Analysis: Rollercoasters \n",
     "\n",
-    "# Credits to Rob Mulla (youtube.com/watch?v=xi0vhXFPegw)"
+    "### Credits to Rob Mulla (youtube.com/watch?v=xi0vhXFPegw)"
    ]
   }, 
  {
