--- a/RollerCoasterAnalysis.ipynb
+++ b/RollerCoasterAnalysis.ipynb
@@ -37,7 +37,17 @@
     "df = pd.read_csv(\"/Users/mayaschoucair/Desktop/Data_Projects/Roller_Coaster_Database/coaster_db.csv\")"
    ]
   },
-  {
+{
+   "cell_type": "markdown",
+   "id": "0cc9be4b-144e-4b1b-8ce4-7563f8963f2c",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "Step 1. Data Understanding"
+   ]
+  },   
+{
    "cell_type": "code",
    "execution_count": 3,
    "id": "0b2f6adb-a19b-43c6-80a2-2f87f5cbc1ed",
@@ -55,8 +65,6 @@
     }
    ],
    "source": [
-    "# Step 1: Data Understanding \n",
-    "\n",
     "df.shape # row count, column count "
    ]
   },
