--- a/RollerCoasterAnalysis.ipynb
+++ b/RollerCoasterAnalysis.ipynb
@@ -44,7 +44,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "Step 1. Data Understanding"
+    "### Step 1. Data Understanding"
    ]
   },   
 {
