--- a/RollerCoasterAnalysis.ipynb
+++ b/RollerCoasterAnalysis.ipynb
@@ -1,6 +1,6 @@
 {
  "cells": [
- {
+  {
    "cell_type": "markdown",
    "id": "0cc9be4b-144e-4b1b-8ce4-7563f8963f2c",
    "metadata": {
@@ -37,7 +37,7 @@
     "df = pd.read_csv(\"/Users/mayaschoucair/Desktop/Data_Projects/Roller_Coaster_Database/coaster_db.csv\")"
    ]
   },
-{
+  {
    "cell_type": "markdown",
    "id": "0cc9be4b-144e-4b1b-8ce4-7563f8963f2c",
    "metadata": {
@@ -860,6 +860,16 @@
     "df.describe() # information about numeric data"
    ]
   },
+``{
+   "cell_type": "markdown",
+   "id": "0cc9be4b-144e-4b1b-8ce4-7563f8963f2c",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### Step 2. Data Preparation"
+   ]
+  }, 
   {
    "cell_type": "code",
    "execution_count": 13,
@@ -867,8 +877,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 2: Data Preparation\n",
-    "\n",
     "# subset data set columns\n",
     "\n",
     "df = df[['coaster_name', \n",
@@ -1540,6 +1548,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0cc9be4b-144e-4b1b-8ce4-7563f8963f2c",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### Step 3. Feature Understanding"
+   ]
+  }, 
+  {
    "cell_type": "code",
    "execution_count": 33,
    "id": "f2691e68-19a2-4a58-817c-6d75ac2ee35f",
@@ -1569,8 +1587,6 @@
     }
    ],
    "source": [
-    "# Step 3: Feature Understanding\n",
-    "\n",
     "# check for years with most coasters introduced\n",
     "df['Year_Introduced'].value_counts()"
    ]
