--- a/RollerCoasterAnalysis.ipynb
+++ b/RollerCoasterAnalysis.ipynb
@@ -1673,6 +1673,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0cc9be4b-144e-4b1b-8ce4-7563f8963f2c",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### Step 4. Feature Relationships"
+   ]
+  },  
+  {
    "cell_type": "code",
    "execution_count": 38,
    "id": "ed36c577-0047-42fb-9299-7f6463f819e3",
@@ -1690,8 +1700,6 @@
     }
    ],
    "source": [
-    "# Step 4: Feature Relationships\n",
-    "\n",
     "# scatter plot - coaster speed vs height\n",
     "df.plot(kind='scatter', x='Speed_mph', y='Height_ft', title='Coaster Speed vs. Height')\n",
     "plt.show()"
@@ -1883,6 +1891,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0cc9be4b-144e-4b1b-8ce4-7563f8963f2c",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### Step 5. Ask Questions"
+   ]
+  },  
+  {
    "cell_type": "code",
    "execution_count": 46,
    "id": "76ba17d8-5d5e-4701-aa13-ae98c79ca59e",
@@ -1912,7 +1930,6 @@
     }
    ],
    "source": [
-    "# Step 5: Ask Questions\n",
     "# What are the locations with the fastest roller coasters (minimum of 10)?\n",
     "\n",
     "# check each location's count\n",
